syntax = "proto3";
package discord_v1;
option go_package = "github.com/thirdscam/chatanium-flexmodule/proto/discord-v1";

import "common.proto";

// Voice streaming service with queue-based architecture
service VoiceStream {
    // Join a voice channel
    rpc VoiceJoin(VoiceJoinRequest) returns (VoiceJoinResponse);

    // Bidirectional voice stream (queue-based send + broadcast receive)
    rpc VoiceStream(stream VoicePacket) returns (stream VoicePacket);

    // Leave voice channel
    rpc VoiceLeave(VoiceLeaveRequest) returns (common.Empty);

    // Set speaking state
    rpc VoiceSpeaking(VoiceSpeakingRequest) returns (common.Empty);

    // Get queue status (for debugging)
    rpc GetQueueStatus(QueueStatusRequest) returns (QueueStatusResponse);
}

// Voice join request
message VoiceJoinRequest {
    string guild_id = 1;
    string channel_id = 2;
    bool mute = 3;
    bool deaf = 4;

    // Optional settings
    int32 priority = 5;        // Default priority (0 = normal)
    int32 buffer_size = 6;     // Receive buffer size (default 100)
}

// Voice join response
message VoiceJoinResponse {
    string connection_id = 1;  // Subscription session ID
    string guild_id = 2;
    string channel_id = 3;
    bool ready = 4;

    // Queue information
    int32 queue_length = 5;    // Current queue length
    int32 active_subscribers = 6;  // Active subscriber count
}

// Voice packet
message VoicePacket {
    string connection_id = 1;
    bytes opus_data = 2;

    // Configurable when sending
    int32 priority = 3;        // Task priority (-10 ~ 10)
    int64 timeout_ms = 4;      // Timeout in milliseconds

    // Included when receiving
    uint32 ssrc = 5;           // Sender SSRC
    uint32 sequence = 6;       // Packet sequence
    uint32 timestamp = 7;      // RTP timestamp
    bytes type = 8;            // Packet type (special markers)
}

// Voice leave request
message VoiceLeaveRequest {
    string connection_id = 1;
}

// Voice speaking request
message VoiceSpeakingRequest {
    string connection_id = 1;
    bool speaking = 2;
}

// Queue status request
message QueueStatusRequest {
    string guild_id = 1;
}

// Queue status response
message QueueStatusResponse {
    int32 queue_length = 1;
    int32 active_subscribers = 2;
    repeated ModuleStats module_stats = 3;
}

// Module statistics
message ModuleStats {
    string module_id = 1;
    uint64 tasks_submitted = 2;
    uint64 tasks_processed = 3;
    uint64 bytes_sent = 4;
    uint64 bytes_received = 5;
}
